# edgarcnp-dev

./: .gitignore  Cargo.toml  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/: dependabot.yml
app/: globals.css  layout.tsx  page.tsx
backup_original/: eslint.config.js  next.config.mjs  package.json.original
backup_original/app/: loader-container.tsx  page.tsx
backup_original/components/: footer-section.tsx  intro-section.tsx  navbar.tsx  theme-detector.tsx  theme-provider.tsx  thoughts-section.tsx  work-section.tsx
backup_original/lib/: constants.ts
components/: dynamic-navbar.tsx  footer-section.tsx  intro-section.tsx  loader.tsx  navbar.tsx  theme-detector.tsx  theme-provider.tsx  thoughts-section.tsx  work-section.tsx
frontend/: package.json  tailwind.config.js
lib/: constants.ts  scroll-utils.ts  theme-utils.ts  utils.ts
public/: _headers
src/: lib.rs  main.rs
src/components/: footer_section.rs  intro_section.rs  loader.rs  mod.rs  navbar.rs  theme_provider.rs  thoughts_section.rs  work_section.rs
src/lib/: mod.rs
src/routes/: home.rs
styles/: tailwind.css
